k8s/deploy-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-back
  labels:
    app: back
spec:
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
