k8s/deploy-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-front
  labels:
    app: front
spec:
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
