k8s/service-back.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-back
spec:
  ports:
  - name: svc-back
    protocol: TCP
    port: 9002
    targetPort: 8080
  selector:
    app: back 
  type: NodePort
