k8s/service-front.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-front
spec:
  ports:
  - name: svc-front
    protocol: TCP
    port: 9001
    targetPort: 80
    nodePort: 30080
  selector:
    app: front 
  type: NodePort
