k8s/service-np.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-multi-container-np
spec:
  ports:
  - name: nginx-svc
    protocol: TCP
    port: 9001
    targetPort: 80
    nodePort: 30080
  - name: multitool-svc
    protocol: TCP
    port: 9002
    targetPort: 8080
  selector:
    app: multi_web 
  type: NodePort
