k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-multi-container
spec:
  ports:
  - name: nginx-svc
    protocol: TCP
    port: 9001
    targetPort: 80
  - name: multitool-svc
    protocol: TCP
    port: 9002
    targetPort: 8080
  selector:
    app: multi_web
  type: ClusterIP
